# 3DStyleTransfer

./: .env.example  .gitignore  Makefile  docker-compose.frontend.yml  docker-compose.yml
assets/faiza/: 004_trellis.glb  0532DA2A-5A68-46B8-9608-2989E5BD272D.HEIC  6B733180-08B5-4AC1-96AC-492758E079D3.HEIC  C6B5F153-E701-46F8-B546-09C8A420AB39.mov  FullSizeRender.heic  IMG_8493.HEIC  IMG_9338.HEIC  VIDEO-2026-01-14-15-35-38.mov
assets/models/: MANIFEST.md  config.xml
assets/models/arches/: islamic_column.stl  (+3 more)
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/api/: config.py  jobs.py  meshup.py  model_assets.py  models.py  pipelines.py  style_transfer.py  workshop.py
backend/app/db_models/: __init__.py  assets.py  job.py  model3d.py
backend/app/pipelines/: base.py  registry.py
backend/app/pipelines/pipeline_a_indirect/: image_stylizer.py  multiview_renderer.py  pipeline.py  reconstructor.py
backend/app/schemas/: job.py  model.py
backend/app/services/: config_loader.py  model_service.py  storage.py
docker/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.meshup  Dockerfile.trellis  nginx.conf
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
gpu-service/: Dockerfile  README.md  docker-compose.yml  hunyuan3d_wrapper.py  instantmesh_wrapper.py  meshup_wrapper.py  requirements.txt  server.py  server_meshup.py  server_trellis.py  trellis_wrapper.py  triposr_wrapper.py
scripts/: download_sketchfab.py  generate_base_shapes.py  generate_templates.py
(+51 files in other folders)
